Added deployment to Netlify in GitHub actions.

--- a/.github/workflows/wp-2-netlify.yml
+++ b/.github/workflows/wp-2-netlify.yml
@@ -15,3 +15,14 @@ jobs:
         run: |
           npm ci
           npm run build
+      - name: Deploy to Netlify
+        uses: nwtgck/actions-netlify@v2.0
+        with:
+          publish-dir: './dist'
+          production-branch: main
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          deploy-message: "Deploy from GitHub Actions"
+        env:
+          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+        timeout-minutes: 1
