Trying to set up triggering this through a webhook.

--- a/.github/workflows/wp-2-netlify.yml
+++ b/.github/workflows/wp-2-netlify.yml
@@ -2,7 +2,12 @@ name: GitHub Wordpress to Netlify Demo
 run-name: ${{ github.actor }} is deploying from WordPress to Netlify 🚀
 env: 
   WP_ENDPOINT: ${{ secrets.WP_ENDPOINT }}
-on: [push]
+on:
+  [push]
+  # Allows external webhook trigger
+  repository_dispatch:
+    types:
+      - wordpress
 jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
