Fixing YAML syntax error... again...

--- a/.github/workflows/wp-2-netlify.yml
+++ b/.github/workflows/wp-2-netlify.yml
@@ -3,8 +3,8 @@ run-name: ${{ github.actor }} is deploying from WordPress to Netlify 🚀
 env: 
   WP_ENDPOINT: ${{ secrets.WP_ENDPOINT }}
 on:
-  push
-  # Allows external webhook trigger
+  push:
+    branches: [main]
   repository_dispatch:
     types:
       - wordpress
