--- a/.github/workflows/wp-2-netlify.yml
+++ b/.github/workflows/wp-2-netlify.yml
@@ -14,6 +14,11 @@ jobs:
         uses: actions/checkout@v3
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
       - run: echo "🖥️ The workflow is now ready to test your code on the runner."
+      - name: Set up node 18.x
+        uses: actions/setup-node@v3
+          with:
+            node-version: '18.x'
+            cache: 'npm'
       - name: Building the application
         run: |
           npm ci
